
[project]
name = "pWebServer"
version = "25.8.a5"
description = "Small, asynchronous web server for use with Raspberry Pi Pico W boards and similar"
authors = [
    {name = "Stephen Sadowski", email = "stephen.sadowski+opensource@sjsadowski.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
